首页功能模块 前端操作 不再请求后端， 安全管理 图表修改（不再跳转页面 直接 切换表格）

--- a/app/src/main/res/layout/activity_safety_managent.xml
+++ b/app/src/main/res/layout/activity_safety_managent.xml
@@ -347,13 +347,20 @@
                     android:padding="@dimen/dp_10"
                     android:text="最近一个月隐患分析"
                     android:textColor="@color/three"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:visibility="gone"/>
 
                 <com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/chart"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_300"
                     android:layout_margin="@dimen/dp_21" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_sub_contractor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:visibility="gone"/>
 
             </LinearLayout>
 
