--- a/app/src/main/res/layout/activity_zhenggai_review.xml
+++ b/app/src/main/res/layout/activity_zhenggai_review.xml
@@ -272,7 +272,8 @@
         android:layout_height="@dimen/dp_30"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/dp_10">
+        android:paddingLeft="@dimen/dp_10"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
