--- a/app/src/main/res/layout/activity_training_check.xml
+++ b/app/src/main/res/layout/activity_training_check.xml
@@ -146,111 +146,144 @@
 
     </LinearLayout>
 
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10">
-
-        <ImageView
+        android:layout_marginTop="@dimen/dp_10"
+        android:orientation="vertical">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/train_cv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            android:src="@mipmap/peixun_beijing" />
-
-
-        <LinearLayout
-            android:id="@+id/peixun_line_top"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <!--        <TextView-->
-            <!--            android:layout_width="1dp"-->
-            <!--            android:layout_height="match_parent"-->
-            <!--            android:background="@color/bg_hui" />-->
-
-            <TextView
-                android:id="@+id/test_peixun_courses"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_108"
-                android:layout_weight="1"
-                android:drawableTop="@mipmap/peixun_kecheng"
-                android:gravity="center"
-                android:onClick="testInto"
-                android:paddingTop="@dimen/dp_30"
-                android:paddingBottom="@dimen/dp_30"
-                android:text="培训课程"
-                android:textColor="@color/three"
-                android:textSize="12sp" />
-
-            <TextView
-                android:id="@+id/test_join_test"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_108"
-                android:layout_weight="1"
-                android:drawableTop="@mipmap/peixun_kaoshi"
-                android:gravity="center"
-                android:onClick="testInto"
-                android:paddingTop="@dimen/dp_30"
-                android:paddingBottom="@dimen/dp_16"
-                android:text="参加考试"
-                android:textColor="@color/three"
-                android:textSize="12sp" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/peixun_line_top"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:id="@+id/test_record"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_108"
-                android:layout_weight="1"
-                android:drawableTop="@mipmap/peixun_jilu"
-                android:gravity="center"
-                android:onClick="testInto"
-                android:paddingTop="@dimen/dp_30"
-                android:paddingBottom="@dimen/dp_16"
-                android:text="考试记录"
-                android:textColor="@color/three"
-                android:textSize="12sp" />
-
-            <TextView
-                android:id="@+id/test_my_grade"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_108"
-                android:layout_weight="1"
-                android:drawableTop="@mipmap/peixun_chengji"
-                android:gravity="center"
-                android:onClick="testInto"
-                android:paddingTop="@dimen/dp_30"
-                android:paddingBottom="@dimen/dp_16"
-                android:text="我的成绩"
-                android:textColor="@color/three"
-                android:textSize="12sp" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/test_update_image"
-            android:layout_width="@dimen/dp_80"
             android:layout_height="@dimen/dp_80"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:onClick="testInto"
-            android:text="照 片"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:layout_margin="@dimen/dp_20"
+            android:onClick="testInto">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="@dimen/dp_50"
+                    android:background="@mipmap/peixun_kecheng"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/dp_20"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="培训课程"
+                    android:gravity="center|left"
+                    android:layout_marginLeft="@dimen/dp_20"
+                    android:textSize="15sp"/>
+                <ImageView
+                    android:layout_width="8dp"
+                    android:layout_height="@dimen/dp_13"
+                    android:background="@mipmap/action_icon"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="@dimen/dp_20"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-    </RelativeLayout>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/exam_cv"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_80"
+            android:layout_margin="@dimen/dp_20"
+            android:onClick="testInto">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="@dimen/dp_50"
+                    android:background="@mipmap/peixun_kaoshi"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/dp_20"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="参加考试"
+                    android:gravity="center|left"
+                    android:layout_marginLeft="@dimen/dp_20"
+                    android:textSize="15sp"/>
+                <ImageView
+                    android:layout_width="8dp"
+                    android:layout_height="@dimen/dp_13"
+                    android:background="@mipmap/action_icon"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="@dimen/dp_20"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/record_cv"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_80"
+            android:layout_margin="@dimen/dp_20"
+            android:onClick="testInto">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="@dimen/dp_50"
+                    android:background="@mipmap/peixun_jilu"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/dp_20"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="考试记录"
+                    android:gravity="center|left"
+                    android:layout_marginLeft="@dimen/dp_20"
+                    android:textSize="15sp"/>
+                <ImageView
+                    android:layout_width="8dp"
+                    android:layout_height="@dimen/dp_13"
+                    android:background="@mipmap/action_icon"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="@dimen/dp_20"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/result_cv"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_80"
+            android:layout_margin="@dimen/dp_20"
+            android:onClick="testInto">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="@dimen/dp_50"
+                    android:background="@mipmap/peixun_chengji"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/dp_20"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="我的成绩"
+                    android:gravity="center|left"
+                    android:layout_marginLeft="@dimen/dp_20"
+                    android:textSize="15sp"/>
+                <ImageView
+                    android:layout_width="8dp"
+                    android:layout_height="@dimen/dp_13"
+                    android:background="@mipmap/action_icon"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="@dimen/dp_20"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
 
 </LinearLayout>
