--- a/app/src/main/res/layout/activity_persinal_detail.xml
+++ b/app/src/main/res/layout/activity_persinal_detail.xml
@@ -91,7 +91,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/persional_type"
+                        android:id="@+id/persional_profession"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="电焊工"
@@ -122,7 +122,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/persional_phone"
+                        android:id="@+id/persional_staff_phone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="136 3652 5210"
@@ -134,6 +134,102 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/dp_7"
                         android:text="联系方式"
+                        android:textColor="@color/three"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="@dimen/dp_1"
+                    android:layout_height="@dimen/dp_22"
+                    android:layout_gravity="center_vertical"
+                    android:background="@color/tab_focuse"
+                    android:paddingTop="@dimen/dp_12"
+                    android:paddingBottom="@dimen/dp_12" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/persional_bumen"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="260"
+                        android:textColor="@color/tab_focuse"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dp_7"
+                        android:text="部门"
+                        android:textColor="@color/three"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_16"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/persional_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="电焊工"
+                        android:textColor="@color/tab_focuse"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dp_7"
+                        android:text="人员类型"
+                        android:textColor="@color/three"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="@dimen/dp_1"
+                    android:layout_height="@dimen/dp_22"
+                    android:layout_gravity="center_vertical"
+                    android:background="@color/tab_focuse" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/persional_sub_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="136 3652 5210"
+                        android:textColor="@color/tab_focuse"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dp_7"
+                        android:text="分包单位"
                         android:textColor="@color/three"
                         android:textSize="12sp" />
 
@@ -220,7 +316,7 @@
                     android:id="@+id/persional_is_peixun"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="已培训"
+                    android:text="无"
                     android:textColor="@color/three"
                     android:textSize="12sp" />
 
@@ -237,7 +333,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="交地情况："
+                    android:text="交底情况："
                     android:textColor="@color/six"
                     android:textSize="12sp" />
 
@@ -245,7 +341,7 @@
                     android:id="@+id/persional_is_jiaodi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="已交"
+                    android:text="无"
                     android:textColor="@color/three"
                     android:textSize="12sp" />
 
@@ -270,7 +366,7 @@
                     android:id="@+id/persional_is_qianding"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="已签订"
+                    android:text="无"
                     android:textColor="@color/three"
                     android:textSize="12sp" />
 
@@ -295,7 +391,7 @@
                     android:id="@+id/persional_is_baogao"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="已告知"
+                    android:text="无"
                     android:textColor="@color/three"
                     android:textSize="12sp" />
 
@@ -307,6 +403,7 @@
                 android:background="@mipmap/line_bg"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:paddingLeft="@dimen/dp_10">
 
                 <TextView
